# clilap-codepush

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/clilap_codepush/: __init__.py  api.py  cli.py  ui.py
src/clilap_codepush.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
