[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clilap-codepush"
version = "2.0.3"
description = "clilap.org codepush — CLI client with interactive TUI"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Lapius7", email = "20071209ryo@gmail.com" }]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
codepush = "clilap_codepush.cli:main"

[project.urls]
Homepage = "https://clilap.org/codepush"
Repository = "https://github.com/Lapius7/clilap-codepush"

[tool.setuptools.packages.find]
where = ["src"]
